# development-context-master

./: AGENTS.md  DEVELOPMENT-CONTEXT.md  README.md  pyproject.toml
docs/: agent-operating-model.md  bootstrap-workflow.md  git-workflow.md  repo-layout.md  repo-standard.md
examples/python-lib/: AGENTS.md
examples/python-service/: AGENTS.md  walkthrough.md
profiles/: javascript-typescript.md  python.md
src/repo_standard/: __init__.py  repo_init.py
src/repo_standard/starter_kits/python/: AGENTS.md  README.md  pyproject.toml
src/repo_standard/starter_kits/python/docs/adr/: 0001-template.md
src/repo_standard/starter_kits/python/docs/diagrams/: README.md
src/repo_standard/starter_kits/python/tests/: test_smoke.py
starter-kits/python/: README.md
starter-kits/python/src/package_name/: __init__.py
starter-kits/python/tests/: test_smoke.py
templates/: AGENTS.md  README.md
templates/docs/adr/: 0001-template.md
tests/: test_repo_init.py
