[project]
name = "__REPO_NAME__"
version = "0.1.0"
description = "__DESCRIPTION__"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "ty>=0.0.1a16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PT"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.src]
include = ["src", "tests"]
